--- a/rapport/configuration.tex
+++ b/rapport/configuration.tex
@@ -7,14 +7,14 @@
 
 
 \usepackage[top=2cm, bottom=2cm, left=3cm, right=3cm]{geometry}
-
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{float}
 \graphicspath{ {./photo/} }
 
-
+%Belles fraction de fration \cfrac
+\usepackage{amsmath}
 
 \usepackage{tikz}
 \usepackage{circuitikz}
